kustomizations/streaming/jellystat/database-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellystat-postgresql
spec:
  serviceName: jellystat-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: jellystat-postgresql
      app.kubernetes.io/name: jellystat-postgresql
  template:
    metadata:
      labels:
        app: jellystat-postgresql
        app.kubernetes.io/name: jellystat-postgresql
    spec:
      enableServiceLinks: false
      containers:
      - name: postgres
        image: postgres:17
        args:
          - "-c"
          - "max_connections=100"
          - "-c"
          - "idle_in_transaction_session_timeout=120000"
          - "-c"
          - "tcp_keepalives_idle=120"
          - "-c"
          - "tcp_keepalives_interval=60"
          - "-c"
          - "tcp_keepalives_count=6"
          - "-c"
          - "statement_timeout=0"
          - "-c"
          - "shared_buffers=256MB"
          - "-c"
          - "work_mem=16MB"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: jellystat-postgresql-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command: [ "pg_isready", "-U", "jellystat" ]
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          exec:
            command: [ "pg_isready", "-U", "jellystat" ]
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      nodeSelector:
        kubernetes.io/hostname: catuai
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      volumes:
      - name: jellystat-postgresql-storage
        persistentVolumeClaim:
          claimName: jellystat-postgresql-pvc
