kustomizations/streaming/jellystat/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat
  namespace: streaming
  labels:
    app.kubernetes.io/name: jellystat
spec:
  selector:
    app: jellystat
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
