kustomizations/streaming/jellystat/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat
spec:
  rules:
  - host: stats.habiflix.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellystat
              port:
                number: 3000
